@@ -1,19 +1,18 @@
 package com.musichub.artist.application.config;
 
+import java.util.List;
+
 import com.musichub.artist.application.ports.out.ArtistReconciliationPort;
 
 import jakarta.enterprise.context.ApplicationScoped;
 import jakarta.enterprise.inject.Any;
 import jakarta.enterprise.inject.Instance;
 import jakarta.enterprise.inject.Produces;
-import jakarta.inject.Named;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * CDI configuration for artist reconciliation ports.
- * Provides a producer method to inject all available ArtistReconciliationPort implementations.
+ * Provides a producer method to inject all available ArtistReconciliationPort
+ * implementations.
  */
 @ApplicationScoped
 public class ArtistReconciliationConfig {
@@ -28,8 +27,9 @@ public class ArtistReconciliationConfig {
      */
     @Produces
     @ApplicationScoped
-    public List<ArtistReconciliationPort> reconciliationPorts(@Any Instance<ArtistReconciliationPort> reconciliationPorts) {
+    public List<ArtistReconciliationPort> reconciliationPorts(
+            @Any Instance<ArtistReconciliationPort> reconciliationPorts) {
         return reconciliationPorts.stream()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
